--- a/javascript-ninja/challenge-23/index.html
+++ b/javascript-ninja/challenge-23/index.html
@@ -24,7 +24,7 @@
   <div class="button-operations">
     <button data-js="button-operation" value="+">+</button>
     <button data-js="button-operation" value="-">-</button>
-    <button data-js="button-operation" value="x">*</button>
+    <button data-js="button-operation" value="x">x</button>
     <button data-js="button-operation" value="÷">÷</button>
     <button data-js="button-equal" value="=">=</button>
     <button data-js="button-ce" value="ce">CE</button>
