--- a/javascript-ninja/carshop/index.html
+++ b/javascript-ninja/carshop/index.html
@@ -32,6 +32,6 @@
   </table>
 
   <script src="dom.js"></script>
-  <script src="challenge-29.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
