adjustment title and add new th

--- a/javascript-ninja/carshop/index.html
+++ b/javascript-ninja/carshop/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Cara Shopping</title>
+  <title>Car Shopping</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 </head>
 <body>
@@ -50,6 +50,7 @@
         <th>Year</th>
         <th>Plate</th>
         <th>Color</th>
+        <thead>&nbsp;</thead>
       </thead>
       <tbody data-js="info-car"></tbody>
     </table>
