--- a/ES2015/negotiation/client/index.html
+++ b/ES2015/negotiation/client/index.html
@@ -9,7 +9,6 @@
 <body class="container">
     <h1 class="text-center">Negociações</h1>
     <div id="messageView"></div>
-
     <form class="form" onsubmit="negotiationController.insert(event)">
         <div class="form-group">
             <label for="data">Data</label>
@@ -25,7 +24,6 @@
         </div>
         <button class="btn btn-primary" type="submit">Incluir</button>
     </form>
-
     <div class="text-center">
         <button class="btn btn-primary text-center" type="button">Importar Negociações</button>
         <button class="btn btn-primary text-center" type="button">Apagar</button>
@@ -39,6 +37,7 @@
     <script src="js/app/models/ListNegotiation.js"></script>
 
     <script src="js/app/views/View.js"></script>
+    <script src="js/app/views/MessageView.js"></script>
     <script src="js/app/views/NegotiationView.js"></script>
 
     <script src="js/app/helpers/DateHelper.js"></script>
