--- a/ES2015/negotiation/client/index.html
+++ b/ES2015/negotiation/client/index.html
@@ -11,15 +11,15 @@
     <form class="form" onsubmit="negotiationController.insert(event)">
         <div class="form-group">
             <label for="data">Data</label>
-            <input type="date" id="data" class="form-control"  autofocus/>
+            <input type="date" data-js="data" class="form-control"  autofocus/>
         </div>
         <div class="form-group">
             <label for="quantidade">Quantidade</label>
-            <input type="number" min="1" step="1" id="quantidade" class="form-control" value="1" />
+            <input type="number" min="1" step="1" data-js="quantidade" class="form-control" value="1" />
         </div>
         <div class="form-group">
             <label for="valor">Valor</label>
-            <input id="valor" type="number" class="form-control" min="0.01" step="0.01" value="0.0"  />
+            <input data-js="valor" type="number" class="form-control" min="0.01" step="0.01" value="0.0"  />
         </div>
         <button class="btn btn-primary" type="submit">Incluir</button>
     </form>
@@ -28,7 +28,7 @@
         <button class="btn btn-primary text-center" type="button">Apagar</button>
     </div>
 
-    <div id="negociacoesView"></div>
+    <div data-js="negociacoesView"></div>
 
     <script src="js/app/models/Negotiation.js"></script>
     <script src="js/app/models/ListNegotiation.js"></script>
