--- a/ES2015/negotiation/client/index.html
+++ b/ES2015/negotiation/client/index.html
@@ -26,7 +26,7 @@
     </form>
     <div class="text-center">
         <button class="btn btn-primary text-center" type="button">Importar Negociações</button>
-        <button class="btn btn-primary text-center" type="button">Apagar</button>
+        <button class="btn btn-primary text-center" type="button" onclick="negotiationController.delete()">Apagar</button>
     </div>
 
     <div data-js="negociacoesView"></div>
