Create new class ProxyFactory

--- a/ES2015/negotiation/client/index.html
+++ b/ES2015/negotiation/client/index.html
@@ -42,6 +42,7 @@
     <script src="js/app/views/NegotiationView.js"></script>
 
     <script src="js/app/helpers/DateHelper.js"></script>
+    <script src="js/app/services/ProxyFactory.js"></script>
     <script type="text/javascript">
         let negotiationController = new NegotiationController();
     </script>
