--- a/ES2015/negotiation/client/index.html
+++ b/ES2015/negotiation/client/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="container">
     <h1 class="text-center">Negociações</h1>
-    <div data-js="messageView"></div>
+    <div data-js="message-view"></div>
     <form class="form" data-js="form" onsubmit="negotiationController.insert(event)">
         <div class="form-group">
             <label for="data">Data</label>
@@ -29,7 +29,7 @@
         <button class="btn btn-primary text-center" type="button" onclick="negotiationController.delete()">Apagar</button>
     </div>
 
-    <div data-js="negociacoesView"></div>
+    <div data-js="negotiations-view"></div>
 
     <script src="js/app/controllers/NegotiationController.js"></script>
 
