--- a/ES2015/negotiation/client/index.html
+++ b/ES2015/negotiation/client/index.html
@@ -24,7 +24,7 @@
         </div>
         <button class="btn btn-primary" type="submit">Incluir</button>
     </form>
-    <div class="text-center">
+    <div class="form-group row text-center">
         <button class="btn btn-primary text-center" type="button">Importar Negociações</button>
         <button class="btn btn-primary text-center" type="button" onclick="negotiationController.delete()">Apagar</button>
     </div>
